--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ body {
     width: auto;
     height: 200px;
 }
+
+.btn, .navbar-brand {
+    background-color: teal;
+}
 /* Changes portrait location when the screen has a max-width of 600px or below */
 @media screen and (max-width: 600px){
     #portrait {
@@ -27,4 +31,8 @@ body {
 .portfolio-img {
     height: 350px;
     max-width: 100%;
+}
+
+.card {
+    margin: 3px;
 }
