--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,13 @@
 } */
 /* Style for the image in the index.html file */
 #portrait {
-    border: 2px solid teal;
+    border: 2px solid #17A2B8;
     width: auto;
     height: 200px;
 }
 
 .btn, .navbar-brand {
-    background-color: teal;
+    background-color: #17A2B8;
 }
 /* Changes portrait location when the screen has a max-width of 600px or below */
 @media screen and (max-width: 600px){
