--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
     height: 200px;
 }
 
-.btn, .navbar-brand, .favicon {
+ .navbar-brand, .favicon {
     background-color: #17A2B8;
 }
 /* Changes portrait location when the screen has a max-width of 600px or below */
