--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /*Style that changes all the fonts in the page to seriff. The bootstrap default is sans-serriff */
- * {
+* {
     font-family: Helvetica, sans-serif;
 } 
 /* Style for the footer border width */
@@ -7,20 +7,10 @@
     border-width: 8px !important;
 }
 
-.image-cropper {
-    width: 300px;
-    height: 300px;
-    position: center;
-    overflow: hidden;
-    border-radius: 50%;
-}
-
 #portrait {
-    display: inline;
-  margin: 0 auto;
-  /* margin-left: -25%; //centers the image */
-  height: 100%;
-  width: auto;
+    border: 2px solid #17A2B8;
+    width: auto;
+    height: 200px;
 }
 
 .favicon {
